Implement build system
CLose gh-1

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+### Privileged and override properties
+privileged.properties
+override.properties
+
 ### Releases
 # This is where releases are built for upload to GitHub
-releases/
+release
 
 ### Composer
 # You shouldn't need to do `composer install`. We only save metadata in composer.json.
-vendor/
+vendor
