--- a/build.xml
+++ b/build.xml
@@ -61,6 +61,7 @@
                 <include name="socialmagick.xml" />
                 <include name=".htaccess" />
                 <include name="web.config" />
+                <include name="LICENSE" />
             </fileset>
         </zip>
     </target>
