Mark both imagick and gd as recommended in composer.json
Previously they were required, making the build failed
if either was missing on the build machine.

--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,13 @@
 	],
 	"require": {
 		"php": "^7.2",
-		"ext-imagick": "*",
 		"ext-fileinfo": "*",
-		"ext-gd": "*",
 		"knplabs/github-api": "^2.0",
 		"php-http/guzzle6-adapter": "^1.1",
 		"czproject/git-php": "^3.10.0"
+	},
+	"suggest": {
+		"ext-imagick": "*",
+		"ext-gd": "*"
 	}
 }
