--- a/build.properties
+++ b/build.properties
@@ -4,5 +4,5 @@ git.binary=/usr/bin/git
 bin.composer=/opt/homebrew/bin/composer
 
 github.organization=lucid-fox
-github.repository=socialmagick
+github.repository=social-magick
 github.release.file=socialmagick.zip
