Fix: plugin installation file didn't have the version in the filename
Close gh-16

--- a/build.properties
+++ b/build.properties
@@ -5,4 +5,4 @@ bin.composer=/opt/homebrew/bin/composer
 
 github.organization=lucid-fox
 github.repository=social-magick
-github.release.file=socialmagick.zip
+github.release.file=socialmagick-*.zip
