--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,15 @@
 		}
 	],
 	"require": {
-		"php": "^7.2",
-		"knplabs/github-api": "^2.0",
-		"php-http/guzzle6-adapter": "^1.1",
-		"czproject/git-php": "^3.10.0",
+		"php": "^7.2||^8.0",
 		"ext-fileinfo": "*",
 		"ext-json": "*"
+	},
+	"require-dev": {
+		"czproject/git-php": "^4.0.0",
+		"knplabs/github-api": "^3.0",
+		"symfony/http-client": "^5.0.0",
+		"nyholm/psr7": "^1.4.1"
 	},
 	"suggest": {
 		"ext-imagick": "*",
