--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
 		"nyholm/psr7": "^1.0",
 		"knplabs/github-api": "^3.0",
 		"czproject/git-php": "^3.10.0",
-		"composer/ca-bundle": "^1.2"
+		"composer/ca-bundle": "^1.2",
+		"rector/rector": "^0.15.19"
 	},
 	"suggest": {
 		"ext-imagick": "*",
