--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
 	"suggest": {
 		"ext-imagick": "*",
 		"ext-gd": "*"
+	},
+	"config": {
+		"allow-plugins": {
+			"php-http/discovery": true
+		}
 	}
 }
