Fix: errant entry in XML manifest prevents installation

--- a/build.xml
+++ b/build.xml
@@ -54,16 +54,14 @@
              basedir="${dirs.root}"
              comment="Lucid Fox Social Magick ${version}">
             <fileset dir="${dirs.root}">
-                <include name="fields/**" />
                 <include name="fonts/**" />
                 <include name="form/**" />
                 <include name="images/**" />
                 <include name="language/**" />
-                <include name="media/**" />
-                <include name="library/**" />
+                <include name="services/**" />
                 <include name="sql/**" />
+                <include name="src/**" />
                 <include name="script.plg_system_socialmagick.php" />
-                <include name="socialmagick.php" />
                 <include name="socialmagick.xml" />
                 <include name=".htaccess" />
                 <include name="web.config" />
